Implementation API Gateway and integration with each services
UI Prototype
